--- a/about.html
+++ b/about.html
@@ -18,7 +18,6 @@
 
 <body>
 
-    <!-- Navbar -->
     <div class="nav-section">
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-custom">
@@ -37,7 +36,7 @@
                     <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                         <ul class="navbar-nav">
                             <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                             <li class="nav-item"><a class="nav-link" href="#service">Service</a></li>
                             <li class="nav-item"><a class="nav-link" href="#resume">Resume</a></li>
                             <li class="nav-item"><a class="nav-link" href="#project">Project</a></li>
@@ -48,20 +47,23 @@
             </nav>
         </div>
     </div>
+    <div class="p-4 pt-0">
+        <div class="breadcrumb-section position-relative overflow-hidden rounded-4 ">
+            <img src="img/post_12-640x640.jpg" class="w-100 h-100 object-fit-cover" alt="Contacts Banner">
 
+            <div
+                class="breadcrumb-overlay position-absolute top-0 start-0 w-100 h-100 d-flex flex-column justify-content-center align-items-center text-center text-white">
+                <h1 class="fw-bold display-5 text-uppercase">About</h1>
+            </div>
 
-    <!-- Hero Scroll Section -->
-    <div class="hero-scroll">
-        <div class="container">
-            <div class="contant">
-                <h1>Master every area <br> of your life</h1>
-                <p class="mt-4">Close the gap between where you are and where you want to be <br>with Tony Robbins'
-                    scientifically proven system.</p>
+            <div
+                class="breadcrumb-nav position-absolute bottom-0 start-0 m-4 bg-white px-3 py-2 rounded-pill shadow-sm">
+                <a href="index.html" class="text-decoration-none text-dark">Home</a>
+                <span class="text-muted"> / About</span>
             </div>
         </div>
     </div>
 
-    <!-- Content Section -->
     <section class="py-5 bg-white">
         <div class="container">
             <div class="row align-items-center g-5">
@@ -103,153 +105,6 @@
             </div>
         </div>
     </section>
-
-    <!-- Events Section -->
-    <section class="events-section">
-        <div class="row g-5  py-5 align-items-center">
-            <div class="  col-md-5">
-                <p class="section-subtitle">Blog</p>
-                <h2 class="section-title">Blogs & News</h2>
-            </div>
-            <div class="col-md-7">
-                <p>Synergistically seize front-end methods of empowerment without extensive core competencies.
-                    Progressively repurpose alternative platforms
-
-                </p>
-            </div>
-        </div>
-
-        <div class="swiper mySwiper">
-            <div class="swiper-wrapper">
-                <div class="swiper-slide">
-                    <div class="event-card video-card">
-                        <img src="sachin_collage_1-new-scaled.webp" alt="Event" class="card-image" />
-                        <video class="card-video" src="2024-05-08T01-12-57.745Z-Homepage_Cards_DWD.mp4" muted loop
-                            preload="none"></video>
-                        <div class="event-content">
-                            <h5>TONY ROBBINS</h5>
-                            <h3>BUSINESS<br>MASTERY</h3>
-                            <p>Grow your business exponentially</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="swiper-slide">
-                    <div class="event-card video-card">
-                        <img src="sachin_collage_1-new-scaled.webp" alt="Event" class="card-image" />
-                        <video class="card-video" src="2024-05-08T01-12-57.745Z-Homepage_Cards_DWD.mp4" muted loop
-                            preload="none"></video>
-                        <div class="event-content">
-                            <h5>TONY ROBBINS</h5>
-                            <h3>UNLEASH THE<br>POWER WITHIN</h3>
-                            <p>Transform your life in 4 days</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="swiper-slide">
-                    <div class="event-card video-card">
-                        <img src="sachin_collage_1-new-scaled.webp" alt="Event" class="card-image" />
-                        <video class="card-video" src="2024-05-08T01-12-57.745Z-Homepage_Cards_DWD.mp4" muted loop
-                            preload="none"></video>
-                        <div class="event-content">
-                            <h5>TONY ROBBINS</h5>
-                            <h3>DATE WITH<br>DESTINY</h3>
-                            <p>Design your ultimate life</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="swiper-slide">
-                    <div class="event-card video-card">
-                        <img src="sachin_collage_1-new-scaled.webp" alt="Event" class="card-image" />
-                        <video class="card-video" src="2024-05-08T01-12-57.745Z-Homepage_Cards_DWD.mp4" muted loop
-                            preload="none"></video>
-                        <div class="event-content">
-                            <h5>TONY ROBBINS</h5>
-                            <h3>LEADERSHIP<br>ACADEMY</h3>
-                            <p>Become an extraordinary leader</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="swiper-slide">
-                    <div class="event-card video-card">
-                        <img src="sachin_collage_1-new-scaled.webp" alt="Event" class="card-image" />
-                        <video class="card-video" src="2024-05-08T01-12-57.745Z-Homepage_Cards_DWD.mp4" muted loop
-                            preload="none"></video>
-                        <div class="event-content">
-                            <h5>TONY ROBBINS</h5>
-                            <h3>WEALTH<br>MASTERY</h3>
-                            <p>Master your financial future</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="swiper-slide">
-                    <div class="event-card video-card">
-                        <img src="sachin_collage_1-new-scaled.webp" alt="Event" class="card-image" />
-                        <video class="card-video" src="2024-05-08T01-12-57.745Z-Homepage_Cards_DWD.mp4" muted loop
-                            preload="none"></video>
-                        <div class="event-content">
-                            <h5>TONY ROBBINS</h5>
-                            <h3>LIFE<br>MASTERY</h3>
-                            <p>Create lasting change</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="swiper-button-next"></div>
-            <div class="swiper-button-prev"></div>
-        </div>
-    </section>
-    <section class="news-section">
-        <div class="row bg-light">
-            <div class="col-md-3">
-                <div class="news-label h-100   d-flex justify-content-center align-items-center">
-                    <h3 class="text-dark">Featured in →</h3>
-                </div>
-            </div>
-            <div class="col-md-9">
-                <div class="swiper news-swiper bg-light">
-                    <div class="swiper-wrapper">
-                        <div class="swiper-slide">
-                            <img src="img/logo1.png" alt="ABP News">
-                        </div>
-                        <div class="swiper-slide">
-                            <img src="img/logo1.png" alt="The Asian Age">
-                        </div>
-                        <div class="swiper-slide">
-                            <img src="img/logo1.png" alt="Zee News">
-                        </div>
-                        <div class="swiper-slide">
-                            <img src="img/logo1.png" alt="Financial Express">
-                        </div>
-                        <div class="swiper-slide">
-                            <img src="img/logo1.png" alt="Indian Express">
-                        </div>
-                        <div class="swiper-slide">
-                            <img src="img/logo1.png" alt="ABP News">
-                        </div>
-                        <div class="swiper-slide">
-                            <img src="img/logo1.png" alt="The Asian Age">
-                        </div>
-                        <div class="swiper-slide">
-                            <img src="img/logo1.png" alt="Zee News">
-                        </div>
-                        <div class="swiper-slide">
-                            <img src="img/logo1.png" alt="Financial Express">
-                        </div>
-                        <div class="swiper-slide">
-                            <img src="img/logo1.png" alt="Indian Express">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Hero Video Section -->
     <section class="video-section">
         <video class="bg-video" src="2024-05-08T01-12-57.745Z-Homepage_Cards_DWD.mp4" autoplay muted loop playsinline>
         </video>
@@ -265,90 +120,87 @@
     </section>
 
 
-
-
-    <section class="video-gallery bg-white">
-
-
+    <section class="stats-section py-5">
         <div class="container">
-            <div class="row g-5   align-items-center">
-                <div class="  col-md-5">
-                    <p class="section-subtitle text-dark">Blog</p>
-                    <h2 class="section-title text-dark">Blogs & News</h2>
-                </div>
-                <div class="col-md-7">
-                    <p class="text-black">Synergistically seize front-end methods of empowerment without extensive core
-                        competencies.
-                        Progressively repurpose alternative platforms
+            <div class="row g-4">
 
-                    </p>
-                </div>
-            </div>
-            <div class="swiper video-swiper">
-                <div class="swiper-wrapper">
-
-                    <div class="swiper-slide ">
-                        <div class="video-cards">
-                            <iframe src="https://www.youtube.com/embed/UjMm7YLhsuI?si=X3dvYNj4H6wNVfI0"
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                                allowfullscreen>
-                            </iframe>
-                        </div>
-                    </div>
-                    <div class="swiper-slide ">
-                        <div class="video-cards">
-                            <iframe src="https://www.youtube.com/embed/UjMm7YLhsuI?si=X3dvYNj4H6wNVfI0"
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                                allowfullscreen>
-                            </iframe>
-                        </div>
-                    </div>
-
-                    <div class="swiper-slide ">
-                        <div class="video-cards">
-                            <iframe src="https://www.youtube.com/embed/UjMm7YLhsuI?si=X3dvYNj4H6wNVfI0"
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                                allowfullscreen>
-                            </iframe>
-                        </div>
-                    </div>
-                    <div class="swiper-slide ">
-                        <div class="video-cards">
-                            <iframe src="https://www.youtube.com/embed/UjMm7YLhsuI?si=X3dvYNj4H6wNVfI0"
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                                allowfullscreen>
-                            </iframe>
-                        </div>
-                    </div>
-                    <div class="swiper-slide ">
-                        <div class="video-cards">
-                            <iframe src="https://www.youtube.com/embed/UjMm7YLhsuI?si=X3dvYNj4H6wNVfI0"
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                                allowfullscreen>
-                            </iframe>
-                        </div>
-                    </div>
-
-                    <div class="swiper-slide ">
-                        <div class="video-cards">
-                            <iframe src="https://www.youtube.com/embed/UjMm7YLhsuI?si=X3dvYNj4H6wNVfI0"
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                                allowfullscreen>
-                            </iframe>
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="video-cards">
-                            <iframe src="https://www.youtube.com/embed/UjMm7YLhsuI?si=X3dvYNj4H6wNVfI0"
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                                allowfullscreen>
-                            </iframe>
+                <!-- Card 1 -->
+                <div class="col-lg-5 col-md-6">
+                    <div class="stat-card purple-card">
+                        <img src="img/image.webp" class="floating-img" alt="">
+                        <div class="">
+                            <div class=" h-100 d-flex flex-column justify-content-between p-4">
+                                <div>
+                                    <h2 class="text-white">50+</h2>
+                                    <p class="text-white">Happy clients who trust my work</p>
+                                </div>
+                                <div class="text-center">
+                                    <a href="#" class=" btn">Studio →</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
+
+                <!-- Card 2 -->
+                <div class="col-lg-7 col-md-6">
+                    <div class="stat-card white-card d-flex align-items-center justify-content-between ">
+                        <img src="img/card2.webp" class="phone-img" alt="">
+                        <div class=" h-100 d-flex flex-column justify-content-between p-4">
+                            <h2>80%</h2>
+                            <div>
+
+                                <p>Clients come back for new projects</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Card 3 -->
+                <div class="col-lg-7 col-md-6">
+                    <div class="stat-card white-card d-flex align-items-center justify-content-between">
+
+                        <div class="d-flex flex-column justify-content-between p-4">
+
+                            <h2>80%</h2>
+
+                            <div class="">
+                                <p>Years of professional experience in designing digital products</p>
+                                <a href="#" class="btn-outline">Start New Project →</a>
+                            </div>
+                        </div>
+                        <img src="img/image3.webp" class="robot-img" alt="">
+                    </div>
+                </div>
+
+                <!-- Card 4 -->
+                <div class="col-lg-5 col-md-6">
+                    <div class="stat-card white-card d-flex align-items-center justify-content-between">
+                        <div class="d-flex flex-column justify-content-between p-4">
+                            <h2>70+</h2>
+                            <div>
+                                <p>Successfully completed projects</p>
+                                <a href="#" class="btn-outline">Works →</a>
+                            </div>
+                        </div>
+                        <img src="img/image-4.webp" class="helmet-img" alt="">
+                    </div>
+                </div>
+
             </div>
         </div>
     </section>
+
+
+
+
+
+    <!-- Hero Video Section -->
+
+
+
+
+
 
 
     <section class="blog-section">
@@ -441,7 +293,51 @@
 
         </div>
     </section>
-
+    <section class="news-section">
+        <div class="row bg-light">
+            <div class="col-md-3">
+                <div class="news-label h-100   d-flex justify-content-center align-items-center">
+                    <h3 class="text-dark">Featured in →</h3>
+                </div>
+            </div>
+            <div class="col-md-9">
+                <div class="swiper news-swiper bg-light">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <img src="img/logo1.png" alt="ABP News">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="img/logo1.png" alt="The Asian Age">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="img/logo1.png" alt="Zee News">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="img/logo1.png" alt="Financial Express">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="img/logo1.png" alt="Indian Express">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="img/logo1.png" alt="ABP News">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="img/logo1.png" alt="The Asian Age">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="img/logo1.png" alt="Zee News">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="img/logo1.png" alt="Financial Express">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="img/logo1.png" alt="Indian Express">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <div class="footer-section">
         <div class="contact-cta ">
