--- a/about.html
+++ b/about.html
@@ -113,7 +113,7 @@
             <h2>Master every<br>area of your life</h2>
             <p>
                 Close the gap between where you are and where you want to be with
-                Tony Robbins' scientifically proven system.
+                Rajeev Bhatt' scientifically proven system.
             </p>
             <button class="btn-start">Start now</button>
         </div>
