--- a/how-rajeev-bhatt-is-transforming-inclusive-education-in-india.html
+++ b/how-rajeev-bhatt-is-transforming-inclusive-education-in-india.html
@@ -11,7 +11,6 @@
 
     <!-- Swiper CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css">
@@ -54,96 +53,164 @@
 
             <div
                 class="breadcrumb-overlay position-absolute top-0 start-0 w-100 h-100 d-flex flex-column justify-content-center align-items-center text-center text-white">
-                <h1 class="fw-bold display-5 text-uppercase">Contact</h1>
+                <h1 class="fw-bold  text-uppercase">How Rajeev Bhatt Is Transforming Inclusive Education in
+                    India
+                </h1>
             </div>
 
             <div
                 class="breadcrumb-nav position-absolute bottom-0 start-0 m-4 bg-white px-3 py-2 rounded-pill shadow-sm">
                 <a href="index.html" class="text-decoration-none text-dark">Home</a>
-                <span class="text-muted"> / Contact</span>
+                <span class="text-muted"> / How Rajeev Bhatt Is Transforming Inclusive Education in India
+                </span>
             </div>
         </div>
     </div>
 
+    <div class="bg-white">
+        <div class="container-fluid py-5">
+            <div class="container">
+                <div class="row g-4">
 
-    <section class="section bg-white">
-        <div class="container">
-            <div class="row align-items-start">
+                    <!-- Main Content -->
+                    <div class="col-lg-8">
+                        <article class="bg-white rounded shadow-sm p-4 p-md-5">
 
-                <!-- LEFT: Heading + Contact Info + Social -->
-                <div class="col-md-6">
-                    <div class="contact-left">
+                            <!-- Header -->
+                            <header class="mb-5  text-dark">
+                                <h3 class=" fw-bold mb-3">
+                                    How Rajeev Bhatt Is Transforming Inclusive Education in India
+                                </h3>
 
-                        <h2>We are always ready to help you and answer your questions</h2>
-                        <p>
-                            Pacific hake false trivally queen parrotfish black pricklyback mosshead warbonnet sweeper!
-                            Greening sleeper.
-                        </p>
+                                <p class="lead text-muted mb-4">
+                                    Empowering neurodiverse learners, championing inclusion, and setting new benchmarks
+                                    for
+                                    education.
+                                </p>
 
-                        <div class="contact-grid">
+                                <!-- Share -->
+                                <div class="d-flex align-items-center gap-3 border-bottom pb-4">
+                                    <span class="fw-semibold text-muted">Share:</span>
 
-                            <div class="contact-item">
-                                <h5 class="text-dark"><i class="bi bi-telephone-fill"></i> Call Center</h5>
-                                <p>800 100 975 20 34</p>
-                                <p>(+123) 1800-234-5678</p>
+                                    <a href="#" class="btn rounded-circle share-btn" style="background:#1877f2;">
+                                        <i class="fab fa-facebook-f"></i>
+                                    </a>
+                                    <a href="#" class="btn rounded-circle share-btn" style="background:#1da1f2;">
+                                        <i class="fab fa-twitter"></i>
+                                    </a>
+                                    <a href="#" class="btn rounded-circle share-btn" style="background:#0a66c2;">
+                                        <i class="fab fa-linkedin-in"></i>
+                                    </a>
+                                    <a href="#" class="btn rounded-circle share-btn" style="background:#25d366;">
+                                        <i class="fab fa-whatsapp"></i>
+                                    </a>
+                                </div>
+                            </header>
+
+                            <!-- Article Content -->
+                            <div class="article-content text-dark">
+
+                                <p>
+                                    Inclusive education is rapidly evolving in India — shifting from token inclusion to
+                                    meaningful
+                                    learning experiences for children with diverse abilities...
+                                </p>
+
+                                <h4>Who Is Rajeev Bhatt and Why He Matters</h4>
+                                <p>
+                                    Rajeev Bhatt is more than an educator — he is a visionary leader in inclusive
+                                    education...
+                                </p>
+
+                                <h4>The Philosophy Behind Transformative Inclusive Education</h4>
+                                <ul>
+                                    <li>Learners gain confidence and agency</li>
+                                    <li>Educators adapt teaching methods</li>
+                                    <li>Families feel supported and empowered</li>
+                                </ul>
+
+                                <h4>Adhyayan Inclusive Learning Centre</h4>
+                                <p>
+                                    A cornerstone of Rajeev Bhatt's contribution is the Adhyayan Inclusive Learning
+                                    Centre...
+                                </p>
+
+                                <h4>Conclusion</h4>
+                                <p>
+                                    Rajeev Bhatt's contribution to inclusive education in India is rooted in dignity,
+                                    opportunity, and belonging.
+                                </p>
+
                             </div>
+                        </article>
+                    </div>
 
-                            <div class="contact-item">
-                                <h5 class="text-dark"><i class="bi bi-geo-alt-fill"></i> Our Location</h5>
-                                <p>USA, New York - 1063</p>
-                                <p>Str. First Avenue 1</p>
-                            </div>
+                    <!-- Sidebar -->
+                    <div class="col-lg-4">
+                        <div class="position-sticky" style="top:20px;">
 
-                            <div class="contact-item">
-                                <h5 class="text-dark"><i class="bi bi-envelope-fill"></i> Email</h5>
-                                <p>neuros@mail.co</p>
-                            </div>
+                            <!-- Recent Posts -->
+                            <div class="bg-white rounded shadow-sm p-4 mb-4">
+                                <h3 class="h5 fw-bold mb-4">Recent Posts</h3>
 
-                            <div class="contact-item">
-                                <h5 class="text-dark"><i class="bi bi-share-fill"></i> Social Network</h5>
-                                <div class="social-links">
-                                    <a href="#"><i class="bi bi-facebook"></i></a>
-                                    <a href="#"><i class="bi bi-twitter-x"></i></a>
-                                    <a href="#"><i class="bi bi-linkedin"></i></a>
-                                    <a href="#"><i class="bi bi-youtube"></i></a>
+                                <div id="recentPostsCarousel" class="carousel slide" data-bs-ride="carousel">
+                                    <div class="carousel-inner">
+
+                                        <div class="carousel-item active">
+                                            <img src="/inclusive-education.jpg" class="img-fluid rounded mb-3" alt="">
+                                            <h6 class="fw-semibold">Understanding Neurodiversity</h6>
+                                            <p class="text-muted small">Recognizing and celebrating diverse learning
+                                                styles...</p>
+                                            <a href="#" class="btn btn-sm btn-primary">Read More</a>
+                                        </div>
+
+                                        <div class="carousel-item">
+                                            <img src="/teacher-training.jpg" class="img-fluid rounded mb-3" alt="">
+                                            <h6 class="fw-semibold">Teacher Training</h6>
+                                            <p class="text-muted small">Strategies for inclusive classrooms...</p>
+                                            <a href="#" class="btn btn-sm btn-primary">Read More</a>
+                                        </div>
+
+                                    </div>
+
+                                    <button class="carousel-control-prev" type="button"
+                                        data-bs-target="#recentPostsCarousel" data-bs-slide="prev">
+                                        <span class="carousel-control-prev-icon bg-dark rounded-circle p-3"></span>
+                                    </button>
+
+                                    <button class="carousel-control-next" type="button"
+                                        data-bs-target="#recentPostsCarousel" data-bs-slide="next">
+                                        <span class="carousel-control-next-icon bg-dark rounded-circle p-3"></span>
+                                    </button>
                                 </div>
                             </div>
 
-                        </div>
+                            <!-- Follow Us -->
+                            <div class="bg-white rounded shadow-sm p-4">
+                                <h3 class="h5 fw-bold mb-4">Follow Us</h3>
 
+                                <a href="#" class="btn w-100 mb-2 text-white" style="background:#1877f2;">
+                                    <i class="fab fa-facebook-f me-2"></i> Facebook
+                                </a>
+                                <a href="#" class="btn w-100 mb-2 text-white" style="background:#1da1f2;">
+                                    <i class="fab fa-twitter me-2"></i> Twitter
+                                </a>
+                                <a href="#" class="btn w-100 mb-2 text-white" style="background:#0a66c2;">
+                                    <i class="fab fa-linkedin-in me-2"></i> LinkedIn
+                                </a>
+                                <a href="#" class="btn w-100 text-white" style="background:#c32aa3;">
+                                    <i class="fab fa-instagram me-2"></i> Instagram
+                                </a>
+                            </div>
+
+                        </div>
                     </div>
+
                 </div>
-
-
-                <!-- RIGHT: Contact Form -->
-                <div class="col-md-6">
-                    <div class="contact-form">
-                        <div class="form-header">
-                            <h2>Got ideas? We've got the skills. Let's team up.</h2>
-                            <p>Tell us more about yourself and what you're got in mind.</p>
-                        </div>
-
-                        <div class="form-group">
-                            <input type="text" placeholder="Your name" />
-                        </div>
-
-                        <div class="form-group">
-                            <input type="email" placeholder="you@company.com" />
-                        </div>
-
-                        <div class="form-group">
-                            <textarea placeholder="Tell us a little about the project..."></textarea>
-                        </div>
-
-                        <button class="submit-btn">Let's get started!</button>
-                    </div>
-                </div>
-
             </div>
         </div>
-    </section>
 
-
+    </div>
 
 
     <div class="footer-section">
