pdf flipbook fix

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <!-- Swiper CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css">
@@ -348,94 +349,95 @@
 
     <section class="blog-section">
         <div class="container">
-            <div class="row g-5  py-5 align-items-center">
-                <div class="  col-md-5">
 
-                    <h2 class="section-title">Understanding Autism In Detailed</h2>
+            <!-- Section Header -->
+            <div class="row g-5 py-5 align-items-center">
+                <div class="col-md-5">
+                    <h2 class="section-title">Understanding Autism In Detail</h2>
                 </div>
                 <div class="col-md-7">
-                    <p class="">Synergistically seize front-end methods of empowerment without extensive core
-                        competencies.
-                        Progressively repurpose alternative platforms
-
+                    <p>
+                        Explore insightful articles focused on autism awareness, inclusive education,
+                        and practical guidance for parents and educators shaping a more understanding society.
                     </p>
                 </div>
             </div>
 
+            <!-- Blog Cards -->
             <div class="row g-4">
+
+                <!-- Card 1 -->
                 <div class="col-md-4">
                     <div class="blog-card">
                         <div class="card-img">
-                            <img src="img/post_02-640x640.jpg" alt="" class="img-fuild">
-
+                            <img src="img/6.jpeg" alt="" class="img-fluid">
                         </div>
-                        <a href="#contact" class="cta-btn">
+
+                        <a href="practical-strategies-for-parents-from-rajeev-practical-strategies-for-parents-from-rajeev-bhatt.html"
+                            class="cta-btn">
                             <span>↗</span>
                         </a>
+
                         <div class="card-contanet">
-                            <span class="card-date">February 15, 2024</span>
-
-                            <h5>Designing the perfect feature comparison table
-                            </h5>
-                            <p>Everyone in my team works towards the samegoal. This enabled our teams to ship new ideas
-                                and feel more capable. Podcasting operational — change management inside of workflows.
-                                Completely synergize.
-
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="blog-card">
-                        <div class="card-img">
-                            <img src="img/post_11-640x640.jpg" alt="" class="img-fuild">
-
-                        </div>
-                        <a href="#contact" class="cta-btn">
-                            <span>↗</span>
-                        </a>
-                        <div class="card-contanet">
-                            <span class="card-date">February 15, 2024</span>
-
-                            <h5>Designing the perfect feature comparison table
-                            </h5>
-                            <p>Everyone in my team works towards the samegoal. This enabled our teams to ship new ideas
-                                and feel more capable. Podcasting operational — change management inside of workflows.
-                                Completely synergize.
-
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="blog-card">
-                        <div class="card-img">
-                            <img src="img/post_12-640x640.jpg" alt="" class="img-fuild">
-
-                        </div>
-                        <a href="#contact" class="cta-btn">
-                            <span>↗</span>
-                        </a>
-                        <div class="card-contanet">
-                            <span class="card-date">February 15, 2024</span>
-
-                            <h5>Designing the perfect feature comparison table
-                            </h5>
-                            <p>Everyone in my team works towards the samegoal. This enabled our teams to ship new ideas
-                                and feel more capable. Podcasting operational — change management inside of workflows.
-                                Completely synergize.
-
+                            <span class="card-date">February 2024</span>
+                            <h5>Practical Strategies for Parents</h5>
+                            <p>
+                                Expert-backed strategies by Rajeev Bhatt offering parents clear,
+                                compassionate guidance to support children with autism and learning differences.
                             </p>
                         </div>
                     </div>
                 </div>
 
+                <!-- Card 2 -->
+                <div class="col-md-4">
+                    <div class="blog-card">
+                        <div class="card-img">
+                            <img src="img/1.webp" alt="" class="img-fluid">
+                        </div>
+
+                        <a href="educating-india-rajeev-bhatt-on-neurodiversity-and-inclusion.html" class="cta-btn">
+                            <span>↗</span>
+                        </a>
+
+                        <div class="card-contanet">
+                            <span class="card-date">February 2024</span>
+                            <h5>Educating India on Neurodiversity</h5>
+                            <p>
+                                An in-depth look at how awareness, inclusion, and research are reshaping
+                                India’s understanding of neurodiverse education.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Card 3 -->
+                <div class="col-md-4">
+                    <div class="blog-card">
+                        <div class="card-img">
+                            <img src="img/5.jpeg" alt="" class="img-fluid">
+                        </div>
+
+                        <a href="how-rajeev-bhatt-is-transforming-inclusive-education-in-india.html" class="cta-btn">
+                            <span>↗</span>
+                        </a>
+
+                        <div class="card-contanet">
+                            <span class="card-date">February 2024</span>
+                            <h5>Transforming Inclusive Education in India</h5>
+                            <p>
+                                Discover how Rajeev Bhatt is redefining inclusive education and empowering
+                                neurodiverse learners across schools and institutions.
+                            </p>
+                        </div>
+                    </div>
+                </div>
 
             </div>
 
-
         </div>
     </section>
+
 
 
     <div class="footer-section">
@@ -465,29 +467,36 @@
                 <div class="footer-content">
                     <div class="row">
                         <!-- Logo & Social -->
-                        <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+                        <div class="col-lg-5 col-md-6 mb-4 mb-lg-0">
                             <div class="footer-logo">
-                                <img src="img/logo.png" class="img-fluid logo" alt="footer-logo">
+                                <h3>Rajeev Bhatt
+                                </h3>
                             </div>
                             <div class="social-links mt-4">
-                                <a href="#" class="social-icon" title="Facebook">
-                                    <i class="fab fa-facebook-f"></i>
+                                <a target="_blank"
+                                    href="https://www.facebook.com/people/Dr-Rajeev-Bhatt/61576720773805/"
+                                    class="social-icon" title="Facebook" aria-label="Facebook">
+                                    <i class="bi bi-facebook"></i>
                                 </a>
-                                <a href="#" class="social-icon" title="Twitter">
-                                    <i class="fab fa-twitter"></i>
+
+
+                                <a target="_blank" href="https://www.linkedin.com/in/rajeev-bhatt-4575751a/"
+                                    class="social-icon" title="LinkedIn" aria-label="LinkedIn">
+                                    <i class="bi bi-linkedin"></i>
                                 </a>
-                                <a href="#" class="social-icon" title="LinkedIn">
-                                    <i class="fab fa-linkedin-in"></i>
-                                </a>
-                                <a href="#" class="social-icon" title="YouTube">
-                                    <i class="fab fa-youtube"></i>
+
+                                <a target="_blank" href="https://www.youtube.com/@Dr.RajeevBhatt" class="social-icon"
+                                    title="YouTube" aria-label="YouTube">
+                                    <i class="bi bi-youtube"></i>
                                 </a>
                             </div>
+
+
                             <div class="since-text">since 2000</div>
                         </div>
 
                         <!-- Contacts Column -->
-                        <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+                        <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
                             <h5 class="footer-title">Contacts</h5>
                             <div class="footer-links">
                                 <p class="address">Rajeev Bhatt, USA, New York - 1060 Str. First Avenue 1</p>
@@ -504,31 +513,14 @@
                             <div class="footer-links">
                                 <a href="index.html" class="footer-link">Home</a>
                                 <a href="about.html" class="footer-link">About</a>
-                                <a href="services.html" class="footer-link">Services</a>
+                                <a href="media.html" class="footer-link">Media</a>
                                 <a href="blog.html" class="footer-link">Blog</a>
                                 <a href="contact.html" class="footer-link">Contacts</a>
                             </div>
                         </div>
 
                         <!-- Services Column -->
-                        <div class="col-lg-3 col-md-6">
-                            <h5 class="footer-title">Services</h5>
-                            <div class="footer-links">
 
-                                <a href="drone-shoot-services.html" class="footer-link">Drone Shoot Services</a>
-                                <a href="event-and-exhibition-coverage.html" class="footer-link">Event & Exhibition
-                                    Coverage</a>
-                                <a href="photography-and-videography.html" class="footer-link">Photography &
-                                    Videography</a>
-                                <a href="product-photography.html" class="footer-link">Product Photography</a>
-                                <a href="ugc-and-podcast-production.html" class="footer-link">UGC & Podcast
-                                    Production</a>
-                                <a href="corporate-and-brand-videos.html" class="footer-link">Corporate & Brand
-                                    Videos</a>
-                                <a href="real-estate-and-interior-photography.html" class="footer-link">Real Estate &
-                                    Interior Photography</a>
-                            </div>
-                        </div>
                     </div>
                 </div>
 
@@ -556,6 +548,7 @@
 
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="script.js"></script>
 
     <script>
         Fancybox.bind("[data-fancybox='gallery']", {
