--- a/media.html
+++ b/media.html
@@ -55,143 +55,16 @@
 
             <div
                 class="breadcrumb-overlay position-absolute top-0 start-0 w-100 h-100 d-flex flex-column justify-content-center align-items-center text-center text-white">
-                <h1 class="fw-bold display-5 text-uppercase">About</h1>
+                <h1 class="fw-bold display-5 text-uppercase">Media</h1>
             </div>
 
             <div
                 class="breadcrumb-nav position-absolute bottom-0 start-0 m-4 bg-white px-3 py-2 rounded-pill shadow-sm">
                 <a href="index.html" class="text-decoration-none text-dark">Home</a>
-                <span class="text-muted"> / About</span>
+                <span class="text-muted"> / Media</span>
             </div>
         </div>
     </div>
-
-    <section class="py-5 bg-white">
-        <div class="container">
-            <div class="row align-items-center g-5">
-
-                <!-- Text content -->
-                <div class="col-lg-6">
-                    <h2 class="fw-bold mb-4 text-dark">The start of a bigger story</h2>
-                    <p class="fs-5 mb-4 text-black">Tony didn't come from wealth.</p>
-                    <p class="text-black">
-                        As a child he had four different fathers and an intense mother.
-                        Food was scarce. One Thanksgiving a man knocked on the door holding
-                        bags filled to the brim with groceries — an anonymous gift from
-                        someone who knew his family was struggling.
-                    </p>
-                    <p class="text-black">
-                        Tony's father at the time was immediately angered and tried to refuse
-                        the gift. But Tony was overjoyed. This was more food than they'd had
-                        in a long time.
-                    </p>
-
-                    <button class="btn btn-black">
-                        <span>Continue</span>
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 74 74" height="34" width="34">
-                            <circle stroke-width="3" stroke="black" r="35.5" cy="37" cx="37"></circle>
-                            <path fill="black"
-                                d="M25 35.5C24.1716 35.5 23.5 36.1716 23.5 37C23.5 37.8284 24.1716 38.5 25 38.5V35.5ZM49.0607 38.0607C49.6464 37.4749 49.6464 36.5251 49.0607 35.9393L39.5147 26.3934C38.9289 25.8076 37.9792 25.8076 37.3934 26.3934C36.8076 26.9792 36.8076 27.9289 37.3934 28.5147L45.8787 37L37.3934 45.4853C36.8076 46.0711 36.8076 47.0208 37.3934 47.6066C37.9792 48.1924 38.9289 48.1924 39.5147 47.6066L49.0607 38.0607ZM25 38.5L48 38.5V35.5L25 35.5V38.5Z">
-                            </path>
-                        </svg>
-                    </button>
-
-                </div>
-
-                <!-- Image -->
-                <div class="col-lg-6">
-                    <img src="3649fc07df8bc585aea452126ee2d7e516cf6b64-512x512.avif" alt="Speaker on stage"
-                        class="img-fluid rounded-4" />
-                </div>
-
-            </div>
-        </div>
-    </section>
-    <section class="video-section">
-        <video class="bg-video" src="2024-05-08T01-12-57.745Z-Homepage_Cards_DWD.mp4" autoplay muted loop playsinline>
-        </video>
-        <div class="video-overlay"></div>
-        <div class="video-content">
-            <h2>Master every<br>area of your life</h2>
-            <p>
-                Close the gap between where you are and where you want to be with
-                Rajeev Bhatt' scientifically proven system.
-            </p>
-            <button class="btn-start">Start now</button>
-        </div>
-    </section>
-
-
-    <section class="stats-section py-5">
-        <div class="container">
-            <div class="row g-4">
-
-                <!-- Card 1 -->
-                <div class="col-lg-5 col-md-6">
-                    <div class="stat-card purple-card">
-                        <img src="img/image.webp" class="floating-img" alt="">
-                        <div class="">
-                            <div class=" h-100 d-flex flex-column justify-content-between p-4">
-                                <div>
-                                    <h2 class="text-white">50+</h2>
-                                    <p class="text-white">Happy clients who trust my work</p>
-                                </div>
-                                <div class="text-center">
-                                    <a href="#" class=" btn">Studio →</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Card 2 -->
-                <div class="col-lg-7 col-md-6">
-                    <div class="stat-card white-card d-flex align-items-center justify-content-between ">
-                        <img src="img/card2.webp" class="phone-img" alt="">
-                        <div class=" h-100 d-flex flex-column justify-content-between p-4">
-                            <h2>80%</h2>
-                            <div>
-
-                                <p>Clients come back for new projects</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Card 3 -->
-                <div class="col-lg-7 col-md-6">
-                    <div class="stat-card white-card d-flex align-items-center justify-content-between">
-
-                        <div class="d-flex flex-column justify-content-between p-4">
-
-                            <h2>80%</h2>
-
-                            <div class="">
-                                <p>Years of professional experience in designing digital products</p>
-                                <a href="#" class="btn-outline">Start New Project →</a>
-                            </div>
-                        </div>
-                        <img src="img/image3.webp" class="robot-img" alt="">
-                    </div>
-                </div>
-
-                <!-- Card 4 -->
-                <div class="col-lg-5 col-md-6">
-                    <div class="stat-card white-card d-flex align-items-center justify-content-between">
-                        <div class="d-flex flex-column justify-content-between p-4">
-                            <h2>70+</h2>
-                            <div>
-                                <p>Successfully completed projects</p>
-                                <a href="#" class="btn-outline">Works →</a>
-                            </div>
-                        </div>
-                        <img src="img/image-4.webp" class="helmet-img" alt="">
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </section>
 
 
 
@@ -199,147 +72,75 @@
 
     <!-- Hero Video Section -->
 
-
-
-
-
-
-
-    <section class="blog-section">
-        <div class="container">
-            <div class="row g-5  py-5 align-items-center">
-                <div class="  col-md-5">
-                    <p class="section-subtitle">Blog</p>
-                    <h2 class="section-title">Blogs & News</h2>
-                </div>
-                <div class="col-md-7">
-                    <p class="">Synergistically seize front-end methods of empowerment without extensive core
-                        competencies.
-                        Progressively repurpose alternative platforms
-
-                    </p>
-                </div>
-            </div>
-
-            <div class="row g-4">
-                <div class="col-md-4">
-                    <div class="blog-card">
-                        <div class="card-img">
-                            <img src="img/post_02-640x640.jpg" alt="" class="img-fuild">
-
-                        </div>
-                        <a href="#contact" class="cta-btn">
-                            <span>↗</span>
-                        </a>
-                        <div class="card-contanet">
-                            <span class="card-date">February 15, 2024</span>
-
-                            <h5>Designing the perfect feature comparison table
-                            </h5>
-                            <p>Everyone in my team works towards the samegoal. This enabled our teams to ship new ideas
-                                and feel more capable. Podcasting operational — change management inside of workflows.
-                                Completely synergize.
-
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="blog-card">
-                        <div class="card-img">
-                            <img src="img/post_11-640x640.jpg" alt="" class="img-fuild">
-
-                        </div>
-                        <a href="#contact" class="cta-btn">
-                            <span>↗</span>
-                        </a>
-                        <div class="card-contanet">
-                            <span class="card-date">February 15, 2024</span>
-
-                            <h5>Designing the perfect feature comparison table
-                            </h5>
-                            <p>Everyone in my team works towards the samegoal. This enabled our teams to ship new ideas
-                                and feel more capable. Podcasting operational — change management inside of workflows.
-                                Completely synergize.
-
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="blog-card">
-                        <div class="card-img">
-                            <img src="img/post_12-640x640.jpg" alt="" class="img-fuild">
-
-                        </div>
-                        <a href="#contact" class="cta-btn">
-                            <span>↗</span>
-                        </a>
-                        <div class="card-contanet">
-                            <span class="card-date">February 15, 2024</span>
-
-                            <h5>Designing the perfect feature comparison table
-                            </h5>
-                            <p>Everyone in my team works towards the samegoal. This enabled our teams to ship new ideas
-                                and feel more capable. Podcasting operational — change management inside of workflows.
-                                Completely synergize.
-
-                            </p>
-                        </div>
-                    </div>
-                </div>
-
-
-            </div>
-
-
-        </div>
-    </section>
-    <section class="news-section">
-        <div class="row bg-light">
+    <section class="news-section  bg-white">
+        <div class="row ">
             <div class="col-md-3">
-                <div class="news-label h-100   d-flex justify-content-center align-items-center">
+                <div class="news-label h-100 d-flex justify-content-center align-items-center">
                     <h3 class="text-dark">Featured in →</h3>
                 </div>
             </div>
             <div class="col-md-9">
-                <div class="swiper news-swiper bg-light">
+                <div class="swiper news-swiper bg-white">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
-                            <img src="img/logo1.png" alt="ABP News">
+                            <a target="_blank"
+                                href="https://www.awazthevoice.in/business-news/rajeev-bhatt-drives-neurodiversity-revolution-in-india-44927.html#:~:text=On%203%20December%202025,%20when,recognition%20of%20a%20single%20achievement.">
+                                <img src="img/feacher/7.svg" alt="ABP News">
+                            </a>
                         </div>
                         <div class="swiper-slide">
-                            <img src="img/logo1.png" alt="The Asian Age">
+                            <a target="_blank" href="https://en.sangritimes.com/spotlight/topic/rajeev-bhatt">
+                                <img src="img/feacher/8.webp" alt="The Asian Age">
+                            </a>
+                        </div>
+
+                        <div class="swiper-slide">
+                            <a target="_blank"
+                                href="https://hindi.news18.com/news/delhi/south-delhi-divya-kala-mela-ability-inclusion-community-empowerment-9968064.html">
+                                <img src="img/feacher/10.avif" alt="Financial Express">
+                            </a>
                         </div>
                         <div class="swiper-slide">
-                            <img src="img/logo1.png" alt="Zee News">
+                            <a target="_blank"
+                                href="https://www.theceo.in/amp/story/press-release/rajeev-bhatt-the-architect-of-indias-neurodiversity-and-inclusion-revolution">
+                                <img src="img/feacher/1.avif" alt="Indian Express">
+                            </a>
                         </div>
                         <div class="swiper-slide">
-                            <img src="img/logo1.png" alt="Financial Express">
+                            <a href="https://timesofindia.indiatimes.com/blogs/author/rajeev-bhatt/" target="_blank">
+                                <img src="img/feacher/2.png" alt="ABP News">
+                            </a>
                         </div>
                         <div class="swiper-slide">
-                            <img src="img/logo1.png" alt="Indian Express">
+                            <a target="_blank"
+                                href="https://www.tribuneindia.com/news/business/rajeev-bhatt-the-architect-of-indias-neurodiversity-and-inclusion-revolution/amp">
+                                <img src="img/feacher/3.webp" alt="The Asian Age">
+                            </a>
                         </div>
                         <div class="swiper-slide">
-                            <img src="img/logo1.png" alt="ABP News">
+                            <a href="https://www.dainikjagranmpcg.com/national-international/rajeev-bhatt-received-national-award-nation-appreciated-his-three-decades/article-39621
+                                target=" _blank">
+                                <img src="img/feacher/4.png" alt="Zee News">
+                            </a>
                         </div>
+
                         <div class="swiper-slide">
-                            <img src="img/logo1.png" alt="The Asian Age">
-                        </div>
-                        <div class="swiper-slide">
-                            <img src="img/logo1.png" alt="Zee News">
-                        </div>
-                        <div class="swiper-slide">
-                            <img src="img/logo1.png" alt="Financial Express">
-                        </div>
-                        <div class="swiper-slide">
-                            <img src="img/logo1.png" alt="Indian Express">
+                            <a target="_blank"
+                                href="https://www.ptinews.com/press-release/rajeev-bhatt-the-architect-of-india%E2%80%99s-neurodiversity-and-inclusion-revolution/3164031">
+                                <img src="img/feacher/6.jpg" alt="Indian Express">
+                            </a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+
+
+
+
+
+
 
     <div class="footer-section">
         <div class="contact-cta ">
