--- a/blog.html
+++ b/blog.html
@@ -11,7 +11,6 @@
 
     <!-- Swiper CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css">
@@ -56,94 +55,149 @@
 
             <div
                 class="breadcrumb-overlay position-absolute top-0 start-0 w-100 h-100 d-flex flex-column justify-content-center align-items-center text-center text-white">
-                <h1 class="fw-bold display-5 text-uppercase">Contact</h1>
+                <h1 class="fw-bold display-5 text-uppercase">Media</h1>
             </div>
 
             <div
                 class="breadcrumb-nav position-absolute bottom-0 start-0 m-4 bg-white px-3 py-2 rounded-pill shadow-sm">
                 <a href="index.html" class="text-decoration-none text-dark">Home</a>
-                <span class="text-muted"> / Contact</span>
+                <span class="text-muted"> / Media</span>
             </div>
         </div>
     </div>
 
 
-    <section class="section bg-white">
+
+
+    <section class="blog-section">
         <div class="container">
-            <div class="row align-items-start">
 
-                <!-- LEFT: Heading + Contact Info + Social -->
-                <div class="col-md-6">
-                    <div class="contact-left">
+            <!-- Section Header -->
+            <div class="row g-5 py-5 align-items-center">
+                <div class="col-md-5">
+                    <h2 class="section-title">Understanding Autism In Detail</h2>
+                </div>
+                <div class="col-md-7">
+                    <p>
+                        Explore insightful articles on autism awareness, inclusive education,
+                        and practical guidance for parents, educators, and caregivers.
+                    </p>
+                </div>
+            </div>
 
-                        <h2>We are always ready to help you and answer your questions</h2>
-                        <p>
-                            Pacific hake false trivally queen parrotfish black pricklyback mosshead warbonnet sweeper!
-                            Greening sleeper.
-                        </p>
+            <!-- Blog Cards -->
+            <div class="row g-4">
 
-                        <div class="contact-grid">
-
-                            <div class="contact-item">
-                                <h5 class="text-dark"><i class="bi bi-telephone-fill"></i> Call Center</h5>
-                                <p>800 100 975 20 34</p>
-                                <p>(+123) 1800-234-5678</p>
-                            </div>
-
-                            <div class="contact-item">
-                                <h5 class="text-dark"><i class="bi bi-geo-alt-fill"></i> Our Location</h5>
-                                <p>USA, New York - 1063</p>
-                                <p>Str. First Avenue 1</p>
-                            </div>
-
-                            <div class="contact-item">
-                                <h5 class="text-dark"><i class="bi bi-envelope-fill"></i> Email</h5>
-                                <p>neuros@mail.co</p>
-                            </div>
-
-                            <div class="contact-item">
-                                <h5 class="text-dark"><i class="bi bi-share-fill"></i> Social Network</h5>
-                                <div class="social-links">
-                                    <a href="#"><i class="bi bi-facebook"></i></a>
-                                    <a href="#"><i class="bi bi-twitter-x"></i></a>
-                                    <a href="#"><i class="bi bi-linkedin"></i></a>
-                                    <a href="#"><i class="bi bi-youtube"></i></a>
-                                </div>
-                            </div>
-
+                <!-- Card 1 -->
+                <div class="col-md-4">
+                    <div class="blog-card">
+                        <div class="card-img">
+                            <img src="img/6.jpeg" alt="" class="img-fluid">
                         </div>
-
+                        <a href="practical-strategies-for-parents-from-rajeev-practical-strategies-for-parents-from-rajeev-bhatt.html"
+                            class="cta-btn">
+                            <span>↗</span>
+                        </a>
+                        <div class="card-contanet">
+                            <span class="card-date">February 2024</span>
+                            <h5>Practical Strategies for Parents</h5>
+                            <p>
+                                Expert insights by Rajeev Bhatt to help parents confidently support
+                                children with autism and learning differences.
+                            </p>
+                        </div>
                     </div>
                 </div>
 
-
-                <!-- RIGHT: Contact Form -->
-                <div class="col-md-6">
-                    <div class="contact-form">
-                        <div class="form-header">
-                            <h2>Got ideas? We've got the skills. Let's team up.</h2>
-                            <p>Tell us more about yourself and what you're got in mind.</p>
+                <!-- Card 2 -->
+                <div class="col-md-4">
+                    <div class="blog-card">
+                        <div class="card-img">
+                            <img src="img/1.webp" alt="" class="img-fluid">
                         </div>
-
-                        <div class="form-group">
-                            <input type="text" placeholder="Your name" />
+                        <a href="educating-india-rajeev-bhatt-on-neurodiversity-and-inclusion.html" class="cta-btn">
+                            <span>↗</span>
+                        </a>
+                        <div class="card-contanet">
+                            <span class="card-date">February 2024</span>
+                            <h5>Educating India on Neurodiversity</h5>
+                            <p>
+                                How awareness, inclusion, and research are changing India’s approach
+                                toward neurodiverse education.
+                            </p>
                         </div>
+                    </div>
+                </div>
 
-                        <div class="form-group">
-                            <input type="email" placeholder="you@company.com" />
+                <!-- Card 3 -->
+                <div class="col-md-4">
+                    <div class="blog-card">
+                        <div class="card-img">
+                            <img src="img/5.jpeg" alt="" class="img-fluid">
                         </div>
-
-                        <div class="form-group">
-                            <textarea placeholder="Tell us a little about the project..."></textarea>
+                        <a href="how-rajeev-bhatt-is-transforming-inclusive-education-in-india.html" class="cta-btn">
+                            <span>↗</span>
+                        </a>
+                        <div class="card-contanet">
+                            <span class="card-date">February 2024</span>
+                            <h5>Transforming Inclusive Education in India</h5>
+                            <p>
+                                Discover how inclusive learning models are empowering neurodiverse
+                                students across schools and institutions.
+                            </p>
                         </div>
+                    </div>
+                </div>
 
-                        <button class="submit-btn">Let's get started!</button>
+                <!-- Card 4 -->
+                <div class="col-md-4">
+                    <div class="blog-card">
+                        <div class="card-img">
+                            <img src="img/1.jpeg" alt="" class="img-fluid">
+                        </div>
+                        <a href="how-rajeev-bhatt-changed-indias-approach-to-learning-disabilities.html"
+                            class="cta-btn">
+                            <span>↗</span>
+                        </a>
+                        <div class="card-contanet">
+                            <span class="card-date">March 2024</span>
+                            <h5>Changing India’s Approach to Learning Disabilities</h5>
+                            <p>
+                                A deep dive into how mindset shifts and policy changes are improving
+                                support for learners with disabilities.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Card 5 -->
+                <div class="col-md-4">
+                    <div class="blog-card">
+                        <div class="card-img">
+                            <img src="img/1.webp" alt="" class="img-fluid">
+                        </div>
+                        <a href="rajeev-bhatt-honoured-with-national-award-2025-by-president-of-india.html"
+                            class="cta-btn">
+                            <span>↗</span>
+                        </a>
+                        <div class="card-contanet">
+                            <span class="card-date">December 2025</span>
+                            <h5>Rajeev Bhatt Honoured with National Award</h5>
+                            <p>
+                                Recognizing a lifetime of dedication toward inclusive education and
+                                empowering persons with disabilities across India.
+                            </p>
+                        </div>
                     </div>
                 </div>
 
             </div>
+
         </div>
     </section>
+
+
+
 
 
 
