pdf flipbook fix

--- a/index.html
+++ b/index.html
@@ -469,8 +469,8 @@
                         <!-- Logo & Social -->
                         <div class="col-lg-5 col-md-6 mb-4 mb-lg-0">
                             <div class="footer-logo">
-                                <h3>Rajeev Bhatt
-                                </h3>
+                                <div class="since-text text-white text-white">Rajeev Bhatt</div>
+
                             </div>
                             <div class="social-links mt-4">
                                 <a target="_blank"
@@ -492,18 +492,18 @@
                             </div>
 
 
-                            <div class="since-text">since 2000</div>
                         </div>
 
                         <!-- Contacts Column -->
                         <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
                             <h5 class="footer-title">Contacts</h5>
                             <div class="footer-links">
-                                <p class="address">Rajeev Bhatt, USA, New York - 1060 Str. First Avenue 1</p>
-                                <a href="tel:+13685678954" class="footer-link">+1 (368) 567 89 54</a>
-                                <a href="tel:+18003508431" class="footer-link">+ 800 350 84 31</a>
-                                <a href="mailto:support@Rajeev Bhatt.com" class="footer-link">support@Rajeev
-                                    Bhatt.com</a>
+                                <p class="address">E-17, 2nd Floor, South Extension Part 1, New Delhi, Delhi 110017</p>
+                                <a href="tel:+91 98100 52388" class="footer-link">+91 98100 52388</a>
+                                <a href="tel:+91 88609 00253" class="footer-link">+91 88609 00253</a>
+
+                                <a href="mailto:support@Rajeev Bhatt.com"
+                                    class="footer-link">drrajeevbhattyt@gmail.com</a>
                             </div>
                         </div>
 
