--- a/contact.html
+++ b/contact.html
@@ -175,36 +175,43 @@
                 <div class="footer-content">
                     <div class="row">
                         <!-- Logo & Social -->
-                        <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+                        <div class="col-lg-5 col-md-6 mb-4 mb-lg-0">
                             <div class="footer-logo">
-                                <img src="img/logo.png" class="img-fluid logo" alt="footer-logo">
+                                <div class="since-text text-white text-white">Rajeev Bhatt</div>
+
                             </div>
                             <div class="social-links mt-4">
-                                <a href="#" class="social-icon" title="Facebook">
-                                    <i class="fab fa-facebook-f"></i>
+                                <a target="_blank"
+                                    href="https://www.facebook.com/people/Dr-Rajeev-Bhatt/61576720773805/"
+                                    class="social-icon" title="Facebook" aria-label="Facebook">
+                                    <i class="bi bi-facebook"></i>
                                 </a>
-                                <a href="#" class="social-icon" title="Twitter">
-                                    <i class="fab fa-twitter"></i>
+
+
+                                <a target="_blank" href="https://www.linkedin.com/in/rajeev-bhatt-4575751a/"
+                                    class="social-icon" title="LinkedIn" aria-label="LinkedIn">
+                                    <i class="bi bi-linkedin"></i>
                                 </a>
-                                <a href="#" class="social-icon" title="LinkedIn">
-                                    <i class="fab fa-linkedin-in"></i>
-                                </a>
-                                <a href="#" class="social-icon" title="YouTube">
-                                    <i class="fab fa-youtube"></i>
+
+                                <a target="_blank" href="https://www.youtube.com/@Dr.RajeevBhatt" class="social-icon"
+                                    title="YouTube" aria-label="YouTube">
+                                    <i class="bi bi-youtube"></i>
                                 </a>
                             </div>
-                            <div class="since-text">since 2000</div>
+
+
                         </div>
 
                         <!-- Contacts Column -->
-                        <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+                        <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
                             <h5 class="footer-title">Contacts</h5>
                             <div class="footer-links">
-                                <p class="address">Rajeev Bhatt, USA, New York - 1060 Str. First Avenue 1</p>
-                                <a href="tel:+13685678954" class="footer-link">+1 (368) 567 89 54</a>
-                                <a href="tel:+18003508431" class="footer-link">+ 800 350 84 31</a>
-                                <a href="mailto:support@Rajeev Bhatt.com" class="footer-link">support@Rajeev
-                                    Bhatt.com</a>
+                                <p class="address">E-17, 2nd Floor, South Extension Part 1, New Delhi, Delhi 110017</p>
+                                <a href="tel:+91 98100 52388" class="footer-link">+91 98100 52388</a>
+                                <a href="tel:+91 88609 00253" class="footer-link">+91 88609 00253</a>
+
+                                <a href="mailto:support@Rajeev Bhatt.com"
+                                    class="footer-link">drrajeevbhattyt@gmail.com</a>
                             </div>
                         </div>
 
@@ -214,31 +221,14 @@
                             <div class="footer-links">
                                 <a href="index.html" class="footer-link">Home</a>
                                 <a href="about.html" class="footer-link">About</a>
-                                <a href="services.html" class="footer-link">Services</a>
+                                <a href="media.html" class="footer-link">Media</a>
                                 <a href="blog.html" class="footer-link">Blog</a>
                                 <a href="contact.html" class="footer-link">Contacts</a>
                             </div>
                         </div>
 
                         <!-- Services Column -->
-                        <div class="col-lg-3 col-md-6">
-                            <h5 class="footer-title">Services</h5>
-                            <div class="footer-links">
 
-                                <a href="drone-shoot-services.html" class="footer-link">Drone Shoot Services</a>
-                                <a href="event-and-exhibition-coverage.html" class="footer-link">Event & Exhibition
-                                    Coverage</a>
-                                <a href="photography-and-videography.html" class="footer-link">Photography &
-                                    Videography</a>
-                                <a href="product-photography.html" class="footer-link">Product Photography</a>
-                                <a href="ugc-and-podcast-production.html" class="footer-link">UGC & Podcast
-                                    Production</a>
-                                <a href="corporate-and-brand-videos.html" class="footer-link">Corporate & Brand
-                                    Videos</a>
-                                <a href="real-estate-and-interior-photography.html" class="footer-link">Real Estate &
-                                    Interior Photography</a>
-                            </div>
-                        </div>
                     </div>
                 </div>
 
